--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,10 +66,16 @@ dependencies {
   natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
   natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
   natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
-  natives "com.crashinvaders.basisu:basisu-wrapper:natives-arm64-v8a"
-  natives "com.crashinvaders.basisu:basisu-wrapper:natives-armeabi-v7a"
-  natives "com.crashinvaders.basisu:basisu-wrapper:natives-x86"
-  natives "com.crashinvaders.basisu:basisu-wrapper:natives-x86_64"
+
+  //natives "com.crashinvaders.basisu:basisu-wrapper:natives-arm64-v8a"
+  //natives "com.crashinvaders.basisu:basisu-wrapper:natives-armeabi-v7a"
+  //natives "com.crashinvaders.basisu:basisu-wrapper:natives-x86"
+  //natives "com.crashinvaders.basisu:basisu-wrapper:natives-x86_64"
+
+  natives "com.crashinvaders.basisu:basisu-wrapper:$gdxBasisUniversalVersion:natives-armeabi-v7a"
+  natives "com.crashinvaders.basisu:basisu-wrapper:$gdxBasisUniversalVersion:natives-arm64-v8a"
+  natives "com.crashinvaders.basisu:basisu-wrapper:$gdxBasisUniversalVersion:natives-x86"
+  natives "com.crashinvaders.basisu:basisu-wrapper:$gdxBasisUniversalVersion:natives-x86_64"
 
 }
 
