--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,8 @@ org.gradle.configureondemand=false
 # the link to the scan won't get shown at all.
 # Documented at: https://docs.gradle.org/current/userguide/command_line_interface.html#sec:command_line_logging
 org.gradle.logging.level=quiet
-gdxBasisUniversalVersion=1.0.2
+gdxBasisUniversalVersion=1.1.0
+# gdxBasisUniversalVersion = 1.0.2
 lombokVersion=1.18.38
 graalHelperVersion=2.0.1
 android.useAndroidX=true
