--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,7 @@ dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   api "com.crashinvaders.basisu:basisu-gdx:$gdxBasisUniversalVersion"
   api "com.crashinvaders.basisu:basisu-wrapper:$gdxBasisUniversalVersion"
+  // api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
   annotationProcessor "org.projectlombok:lombok:$lombokVersion"
   compileOnly "org.projectlombok:lombok:$lombokVersion"
 
