--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:8.12.3'
     classpath "io.freefair.gradle:lombok-plugin:9.1.0"
+    classpath "org.nanohttpd:nanohttpd:2.3.1"
     // classpath "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
   }
 }
