--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:8.12.3'
-    classpath "io.freefair.gradle:lombok-plugin:9.1.0"
-    classpath "org.nanohttpd:nanohttpd:2.3.1"
-    // classpath "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+    classpath 'org.nanohttpd:nanohttpd:2.3.1'
   }
 }
 
@@ -29,7 +27,6 @@ allprojects {
 
 configure(subprojects - project(':android')) {
   apply plugin: 'java-library'
-  apply plugin: 'io.freefair.lombok'
   sourceCompatibility = 8
 
   // From https://lyze.dev/2021/04/29/libGDX-Internal-Assets-List/
