--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0.0
-app.id=com.trinketier
-app.mainclass=com.trinketier.IOSLauncher
+app.id=com.ietsnut.trinketier
+app.mainclass=com.ietsnut.trinketier.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
 app.name=Trinketier
