--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -12,7 +12,7 @@
       tools:ignore="UnusedAttribute"
       android:theme="@style/GdxTheme">
     <activity
-        android:name="com.trinketier.android.AndroidLauncher"
+        android:name="com.ietsnut.trinketier.android.AndroidLauncher"
         android:label="@string/app_name"
         android:screenOrientation="landscape"
         android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
